# play-rust

./: .gitignore  README.md
datatype/src/: main.rs
datatype/src/file/: file2.rs  mod.rs
owner/src/: main.rs
pdfexpress/tauri-app/: Cargo.toml
pdfexpress/tauri-app/src/: main.rs
pdfexpress/tauri-app/src/components/: invoice_form.rs  mod.rs
play-wasm/: Cargo.toml  README.md  bun.lockb  index.html  package.json  server.js
vat/: Cargo.toml
vat/src/: main.rs
yew-rust/: Cargo.toml  LICENSE-MIT  README.md  index.html  index.scss
yew-rust/src/: main.rs  routes.rs
yew-rust/src/components/: mod.rs  navigation.rs
yew-rust/src/page/: calculate.rs  home.rs  mod.rs  resume.rs
