[package]
name = "tauri-app"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.20", features = ["csr"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pdf-canvas = "0.7.0"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    'Blob',
    'BlobPropertyBag',
    'Document',
    'Element',
    'HtmlElement',
    'Window',
    'Event',
    'EventTarget',
    'HtmlInputElement',
    'HtmlSelectElement',
    'HtmlFormElement',
    'HtmlButtonElement',
    'HtmlSpanElement',
    'HtmlTableElement',
    'HtmlTableRowElement',
    'HtmlTableCellElement',
    'Url',
] }

